# rankine-groundstation

./: .gitignore  .gitmodules  README.md
gs-backend/: README.md  pyproject.toml
gs-backend/src/: main.py  packet.py  path.py  protocol_mav.py  protocol_path.py  protocol_ws.py  utils.py
gs-frontend/: .gitignore  .prettierrc  README.md  package-lock.json  package.json  ros-ts-generator-config.json  vite.config.ts
gs-frontend/src/: app.html
gs-frontend/src/lib/: SensorView.svelte  edit_path.ts  geometry.ts  graphics.ts  index.ts  mav.ts  mavros.ts  mission.ts  network.ts  pfd.ts  projection.ts  waypoints.ts
gs-frontend/src/lib/rostypes/: ros_msgs.ts
gs-frontend/src/routes/: +page.svelte
gs-frontend/src/routes/ros-test/: +page.svelte
gs-frontend/static/: coordinates.json  path_self_intersection.json
mpcc/: .clang-format  CMakeLists.txt  README.md  controller_config.toml  pyproject.toml  results.csv  solver_config.toml  source_acados
mpcc/acados_controller/: acados_ocp.py  acados_ocp_fdm_2d.json  cc_controller.py  config.toml  discrete_gust.py  dryden_turbulence.py  dryden_turbulence_30m.csv  fdm2d_MX.py  main.py  mpcc_controller.py  numeric_cc_controller.py  path_utils.py  plot_fdm.py  recover_data.py  run_all_controllers.py  run_ocp.py  source_ld.fish  test_path.json  typst.mplstyle
mpcc/acados_controller/computational_data_analysis/: make_plot.py
mpcc/acados_controller/paths/: chicane.json  loiter.json  loiter_40.json  long_test_path.json  path_long_into_tight.json  rankine_name.json  test_box.json  twisty_test_path.json
mpcc/diagrams/: circular_segment.typ
mpcc/examples/: solver_convergence.py
mpcc/src/: main.cpp
mpcc/src/cpp/: CMakeLists.txt
mpcc/src/cpp/bindings/: CMakeLists.txt  dubins_py.cc
mpcc/src/cpp/include/: controller.h  drake_dynamic_systems.h  dubins.h  dubins_path.h  dubins_segment.h  dubins_solver.h  dynamics.h
mpcc/src/cpp/lib/: drake_dynamic_systems.cc  dubins.cc  dubins_path.cc  dubins_segment.cc  dubins_solver.cc  dynamics.cc
mpcc/src/mpcc/: __init__.py  acados_parameters.py  path_utils.py  projection.py  pydubins.pyi  quaternion.py  serialization_schema.py
mpcc/src/mpcc/acados/: acados_ocp.py  cc_controller.py  fdm2d.py  plot_fdm.py
mpcc/src/mpcc/controller/: __init__.py  cc_controllers.py  controller.py  fdm2d_MX.py  mpcc_controller.py  setup_ocp.py
mpcc/src/mpcc/pydubins/: __init__.py  cpp_solve.pyi  dubins_path.py  dubins_segment.py  dubins_solver.py  dubins_types.py
mpcc/src/mpcc/ros/: mpcc_guided_node.py  path_drag_node.py  state_machine.py  sysid.py
mpcc/tests/: CMakeLists.txt  test_dubins.cpp
mpcc/tests/python/: test_params.py  test_projection.py  test_pydubins.py  test_solver.py
ros/: CMakeLists.txt  package.xml
ros/src/: ros_node.py
