[project]
name = "gs-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "LGPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "mpcc",
    "pydantic>=2.10.6",
    "websockets>=15.0.1",
]


[[tool.uv.index]]
# nightly packages
name = "drake"
url = "https://drake-packages.csail.mit.edu/whl/nightly/"

[tool.uv.sources]
mpcc = { path = "../mpcc", editable = true }
