[project]
name = "mpcc"
version = "0.1.0"
description = "Model Predictive Contouring Control for Even Flow"
readme = "README.md"
authors = [
    { name = "Jasper Day", email = "jromanoday@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "drake<0.1",
    "acados-template",
    "pydantic>=2.10.6",
]

[[tool.uv.index]]
# nightly packages
name = "drake"
url = "https://drake-packages.csail.mit.edu/whl/nightly/"

[tool.uv.sources]
acados-template = { path = "external/acados/interfaces/acados_template" }

[tool.pip]
extra-index-url = ["https://drake-packages.csail.mit.edu/whl/nightly/"]

[project.optional-dependencies]
dev = [
    "pytest", "scikit-build-core>=0.10", "pybind11"
]

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "fastapi>=0.115.11",
    "ipython>=8.34.0",
    "matplotlib>=3.10.1",
    "pytest>=8.3.5",
    "pytest-repeat>=0.9.3",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build"
cmake.args = [
    "-DCMAKE_EXPORT_COMPILE_COMMANDS=ON",
]
cmake.build-type = "Release"

[tool.pytest.ini_options]
testpaths = ["tests"]
